


DescTools 0.99.59 (2024-12-10)
------------------------------

NEW FUNCTIONS ADDED:
  * SumCI() returns the confidence interval of the sum of multiple variables
    with given confidence intervals.

UPDATED FUNCTIONS:
  * BrierScoreCI() will accept scaled argument now.
  * KendallW() has been updated to better support missing values.

BUGFIXES:
  * CountCompCases() accepts data.tables and list columns in data.frames.
  * 




DescTools 0.99.58 (2024-11-10)
------------------------------

NEW FUNCTIONS ADDED:
  * ReadSPSS() converts SPSS data in a data.frame.
  * AppendRowNames() shortcut to append rownames to a data.frame.

UPDATED FUNCTIONS:
  * CourseData() finds more files now.

BUGFIXES:
  * BrierScore() has not handled the responses of glms correctly
    since the last change, forcing the user to use predict-response
    interface.



DescTools 0.99.56 (2024-08-31)
------------------------------

NEW FUNCTIONS ADDED:
  * WrdTableHeadings() enables the easy definition of table 
    headings in Word tables.
 
UPDATED FUNCTIONS:
  * TOne() gets an own subsetting routine.
  * Using #define STRICT_R_HEADERS used in order to comply with CRAN's
    new standards.
  * DescToolsOptions() gets a new option "linesep" used by some output 
    functions.

BUGFIXES:
  * none




DescTools 0.99.55 (2024-07-31)
------------------------------

NEW FUNCTIONS ADDED:
  * NZ() returns all non zero elements from a numeric vector.
  * BrierScoreCI(), CstatCI(), RSqCI() return bootstrap confidence intervals
    for the BrierScore, the C-Statistic and the R squared of a linear model.
 
UPDATED FUNCTIONS:
  * MeanCIn() displays a warning if the required width of the confidence 
    interval exceeds the standard deviation.
  * ToWrd.table() gets another default for row.names. It now is TRUE instead
    of FALSE as before.
  * OddsRatio.glm changes its argument use.profile's default from TRUE to FALSE.
  * MedianCI() allows further bootstrap types, dots arguments are now 