@@ -1,8 +1,8 @@
 Package: DescTools
 Type: Package
 Title: Tools for Descriptive Statistics
-Version: 0.99.58.8
-Date: 2024-11-27
+Version: 0.99.58.9
+Date: 2024-11-30
 Authors@R: c(
   person(given="Andri", family="Signorell", 
          email = "andri@signorell.net", 
