@@ -78,7 +78,8 @@ reference:
     # Transform: numeric to factor
     - CutQ
     - CutAge
-
+    - CutGen
+  
     # Transform: factor to factor
     - Recode
     - NALevel
