@@ -7,6 +7,7 @@ DescTools 0.99.59 (2024-12-10)
 NEW FUNCTIONS ADDED:
   * SumCI() returns the confidence interval of the sum of multiple variables
     with given confidence intervals.
+  * CutGen() yields the generation category based on year of birth. 
 
 UPDATED FUNCTIONS:
   * BrierScoreCI() will accept scaled argument now.
